# SolnadoCash

./: .gitignore  Anchor.toml  README.md  TASKS.md  package.json
app/: index.html  package-lock.json  package.json  vite.config.ts
app/public/circuits/: withdraw.wasm
app/src/: App.tsx  config.ts  index.css  main.tsx
app/src/components/: NetworkGuard.tsx  NoteDisplay.tsx  PoolSelector.tsx  ProgressIndicator.tsx
circuits/: .gitignore  package-lock.json  package.json
circuits/deposit/: deposit.circom
circuits/lib/: poseidon.circom
circuits/merkle/: merkle_proof.circom
circuits/test/: circuits.test.js
circuits/withdraw/: withdraw.circom
programs/solnadocash/: Cargo.toml
programs/solnadocash/src/: admin.rs  benchmark.rs  deposit.rs  error.rs  events.rs  initialize_pool.rs  lib.rs  state.rs  vk.rs  withdraw.rs  zeros.rs
relayer/: package-lock.json  package.json
relayer/src/: api.js  fees.js  health.js  index.js  tx.js  verify.js
relayer/test/: api.test.js  fees.test.js  integration.test.js
scripts/: benchmark_cu.sh  convert_vk_to_rust.js  deploy_pools.js  devnet_e2e.js  dummy_proof.json  generate_zeros.js  trusted_setup.sh
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: fees.js  fees.ts  index.ts  note.js  note.ts  proof.js  proof.ts  stealth.js  stealth.ts  types.d.ts
sdk/test/: e2e.test.js  e2e.test.ts  fees.test.js  fees.test.ts  note.test.js  note.test.ts  proof.test.js  proof.test.ts  stealth.test.js  stealth.test.ts
tests/: benchmark.js  benchmark.ts  pool.js  pool.ts  solnadocash.ts  withdraw.js  withdraw.ts
(+8 files in other folders)
